# JUCE_EQUALIZER

./: .gitignore  CMakeLists.txt  README.md
cmake/: get_cpm.cmake
equalizer/: CMakeLists.txt
equalizer/include/equalizer/: PluginEditor.h  PluginProcessor.h
equalizer/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/: CMakeLists.txt
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
